--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>About Me</h1>
+        <h1>About Me !</h1>
         <p class="about">John, a frontend web developer, <br>
             is passionate about creating innovative <br>
             and user-friendly web interfaces. <br>
